	null on boundary nodes, we do not know yet what to do in this case.
	* src/org/jcae/mesh/amibe/algos3d/ImproveConnectivity.java: Fix
	NullPointerException with open surfaces.
	* src/org/jcae/mesh/amibe/algos3d/LengthDecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/QEMDecimateHalfEdge.java: New
	maxlength argument to not create long edges.

Sun Feb 24 18:40:59 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/JCAEFormatter.java: Replace log4j by
	java.util.logging.Logger in all java files.  This new class is
	designed to produce log output similar to log4j.
	* src/org/jcae/mesh/MeshView.java
	  src/org/jcae/mesh/java3d/Viewer.java
	  src/org/jcae/mesh/java3d/ComputeEdgesConnectivity.java
	  src/org/jcae/mesh/java3d/XMLBranchGroup.java: Files removed,
	they have been superseeded by viewer3d a long time ago.

Wed Jan 16 11:25:53 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildAdjacency): Use an
	auxiliary LinkedHashMap instance to not abuse Vertex.link member.

Mon Jan 14 12:54:45 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java: Remove one of the many
	buildAdjacency() methods, it had been declared obsolete for a while.

Wed Jan  9 10:38:47 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/XMLHelper.java
	  src/org/jcae/mesh/xmldata/MeshReader.java: IOException(Throwable)
	constructor has been introduced in Java 6, replace it by
	IOException(String) to allow compilation with Java 5.
	* src/org/jcae/mesh/oemm/RawStorage.java
	  src/org/jcae/mesh/MeshValidSoup.java
	  src/org/jcae/mesh/MesherTest.java
	  src/org/jcae/mesh/amibe/patch/Calculus2D.java
	  src/org/jcae/mesh/amibe/patch/ElementPatchFactory.java
	  src/org/jcae/mesh/amibe/patch/Calculus3D.java
	  src/org/jcae/mesh/amibe/patch/Mesh2D.java
	  src/org/jcae/mesh/amibe/util/QSortedTree.java